# rnm

./: .gitignore  Dockerfile.test  README.md  pyproject.toml
config/: example.yaml  minimal.yaml
scripts/: install-deps.sh  pin-usb-devices.sh
src/rnm/: __init__.py  __main__.py  cli.py  setup_wizard.py
src/rnm/config/: __init__.py  defaults.py  loader.py  schema.py
src/rnm/generators/: __init__.py  direwolf.py  freedvtnc2.py  reticulum.py
src/rnm/hardware/: __init__.py  audio.py  serial.py
src/rnm/process/: __init__.py  manager.py  services.py  supervisor.py
src/rnm/tui/: __init__.py  app.py  dashboard.py  log_viewer.py  status_bar.py
src/rnm/utils/: deps.py  logging.py  network.py
tests/: test_config.py  test_generators.py  test_process.py
